force-app/main/default/objects/Chapters__c/Chapters__c.object-meta.xml
<CustomObject>
    <label>Chapters</label>
    <nameField>
        <label>Chapters Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Chapters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>