force-app/main/default/objects/Chapters__c/fields/Chapter_Code__c.field-meta.xml
<CustomField>
    <fullName>Chapter_Code__c</fullName>
    <label>Chapter Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>