force-app/main/default/objects/Chapters__c/fields/Chapter_Description__c.field-meta.xml
<CustomField>
    <fullName>Chapter_Description__c</fullName>
    <label>Chapter Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>