force-app/main/default/objects/Chapters__c/fields/Chapter_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Chapter_Sequence__c</fullName>
    <label>Chapter Sequence</label>
    <length>255</length>
    <type>Text</type>
</CustomField>