force-app/main/default/objects/Chapters__c/fields/Chapter_Title__c.field-meta.xml
<CustomField>
    <fullName>Chapter_Title__c</fullName>
    <label>Chapter Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>