force-app/main/default/objects/Chapters__c/fields/Chapter_Type__c.field-meta.xml
<CustomField>
    <fullName>Chapter_Type__c</fullName>
    <label>Chapter Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Files</fullName>
            </value>
            <value>
                <fullName>Video</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>