force-app/main/default/objects/Chapters__c/fields/Random_Play_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Random_Play_Allowed__c</fullName>
    <label>Random Play Allowed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>