force-app/main/default/objects/Chapters__c/fields/Video__c.field-meta.xml
<CustomField>
    <fullName>Video__c</fullName>
    <label>Video</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>